force-app/main/default/objects/Product2/fields/AvailableAgent__c.field-meta.xml
<CustomField>
    <fullName>AvailableAgent__c</fullName>
    <label>Available Agent</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agent-Local</fullName>
                <label>Agent - Local</label>
            </value>
            <value>
                <fullName>Agent-International</fullName>
                <label>Agent - International</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>