force-app/main/default/objects/Product2/fields/CoordX__c.field-meta.xml
<CustomField>
    <fullName>CoordX__c</fullName>
    <label>CoordX</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>