force-app/main/default/objects/Product2/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>