force-app/main/default/objects/Product2/fields/ReservationPrice__c.field-meta.xml
<CustomField>
    <fullName>ReservationPrice__c</fullName>
    <label>Reservation Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>