force-app/main/default/objects/Product2/fields/TransferredDate__c.field-meta.xml
<CustomField>
    <fullName>TransferredDate__c</fullName>
    <label>Transferred Date</label>
    <type>Date</type>
</CustomField>