force-app/main/default/objects/Product2/fields/UnitExternalID__c.field-meta.xml
<CustomField>
    <fullName>UnitExternalID__c</fullName>
    <externalId>true</externalId>
    <label>Unit External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>