force-app/main/default/objects/Product2/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Unit Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>UnitType__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>UnitType__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units1</relationshipName>
    <type>Lookup</type>
</CustomField>