force-app/main/default/objects/Product2/validationRules/ValidateTransferStatusAndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateTransferStatusAndDate</fullName>
    <active>true</active>
    <description>To ensure that transferred date is provided when Unit is Transferred</description>
    <errorConditionFormula>OR(
    AND(
        ISPICKVAL( Status__c , &quot;Transferred&quot;), 
        ISBLANK( TransferredDate__c )
    ),
    AND(
        NOT(ISBLANK(TransferredDate__c )), 
        NOT(ISPICKVAL(Status__c , &quot;Transferred&quot;))
    )
)</errorConditionFormula>
    <errorMessage>Transferred Date must be filled out only when the Status is &apos;Transferred&apos;. If the Status is not &apos;Transferred&apos;, the Transferred Date must be blank.</errorMessage>
</ValidationRule>