force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Project__c</columns>
    <columns>UnitType__c</columns>
    <columns>Floor__c</columns>
    <columns>AreaSqm__c</columns>
    <columns>Status__c</columns>
    <columns>ReservationPrice__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <label>All Units</label>
</ListView>